<resources>
    <string name="app_name">Jetizz Kurye</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jetizz Kurye</string>
    <string name="nav_header_subtitle">Jet hızında teslimat</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Jetizz</string>
    <string name="menu_subeyukleme">Şube Yükleme</string>
    <string name="menu_merkezdengelen">Merkezden Gelen</string>
    <string name="menu_zimmetealma">Zimmet Al</string>
    <string name="menu_sube_indirme">Şube İndirme</string>
    <string name="menu_hat_yukleme">Hat Yükleme</string>
    <string name="menu_hat_indirme">Hat İndirme</string>
    <string name="menu_TM_Sevk">TM Sevk</string>
    <string name="menu_TM_indirme">Çıkış TM İndirme</string>
    <string name="menu_dagitim_sube_sevk">Dağıtım Şubesine Sevk</string>
    <string name="menu_zimmetlistesi">Zimmet Listesi</string>
    <string name="menu_teslimiade">Teslim/İade İşlemleri</string>
    <string name="menu_desi">Desi Güncelle</string>
    <string name="menu_barkod">Barkod ile Teslim</string>
    <string name="menu_dagitimsubesevk">Dağıtım Şube Sevk</string>
    <string name="menu_trendyol">Trendyol Alımı</string>
    <string name="menu_mecit">Mecit Deneme</string>
    <string name="menu_notbirakildi">Not Bırakılan Gönderiler</string>
    <string name="menu_mecit2">Deneme Listeleme</string>
    <string name="menu_n11">N11 Alımı</string>
    <string name="menu_iade">Müşteri İade</string>
    <string name="menu_tools">Ayarlar</string>
    <string name="menu_gelen_gonderiler">Gelen Gönderiler</string>
    <string name="aynigunteslimat"></string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
